# test_fastapi

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
app/: database.py  main.py  models.py  requirements.txt  schemas.py
app/routers/: appointments.py  clinics.py  doctors.py  patients.py
app/services/: appointmenr_services.py  clinic_services.py  doctor_services.py  patient_services.py
src/: crud.py  database.py  main.py  models.py  schemas.py
src/crud/: __init__.py  clinic_crud.py  doctor_crud.py
src/models/: ___models.py  appointment.py  clinic.py  doctor.py  patient.py
tests/: conftest.py  test_appointments.py  test_clinic_service.py  test_clinics.py  test_crud.py  test_doctors.py  test_patients.py  utils.py
