[tool.poetry]
name = "test-fastapi"
version = "0.1.0"
description = ""
authors = ["B0ond <amiram19@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.7"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.37"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
